--- a/paginas/index.html
+++ b/paginas/index.html
@@ -12,25 +12,37 @@
   
   <link rel="stylesheet" href="../estilos/estilo_index.css">
   <!--Incluindo estilo personalizado.-->
-
-  <title>O EXTERMATRIXADOR</title> <!--Por favor, deixa esse nome, tá PERFEITO!-->
+  <title>O SITE</title>
 </head>
-
-
-
 <body>
-  <div id="caixa-flex" class="caixa-flex">
+  <div class="caixa-flex">
+    <!-- Barra fixa de cima -->
+    <div class="barra-superior">
+      <h1>o site</h1>
+    </div>
+
+  <!-- Container principal -->
+  <div class="container-principal">
     
-    <!--Uma saudação e um botão que exibe um alerta ao ser pressionado.-->
-      
-      <h1>Olá!</h1>
-      <br>
-      <button id="botao" onclick="saudacao()">
-        Clique em mim!
-      </button>
-  
+    <!-- Menu Lateral -->
+    <div class="menu-lateral">
+      <h1>Menu Lateral</h1>
+      <div class="botoes-menu">
+        <button id="opcao1">Opção 1</button>
+        <button id="opcao2">Opção 2</button>
+        <button id="opcao3">Opção 3</button>
+        <button id="opcao4">Opção 4</button>
+      </div>
+    </div>
+
+    <!-- Conteúdo Principal -->
+    <div class="conteudo-principal">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati earum praesentium temporibus eum architecto aut, enim rerum animi quam ad quis, maxime autem possimus sed nam doloremque ex nisi neque? lorem
+      </p>
+    </div>
   </div>
-  
+
   <script src="../scripts/script_index.js"></script>
 </body>
 
