--- a/paginas/index.html
+++ b/paginas/index.html
@@ -1,51 +1,114 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculadora Linear & Geral</title>
+
   
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <!--Incluindo o BootStrap via CDN--> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   
   <link rel="stylesheet" href="../estilos/estilo_index.css">
-  <!--Incluindo estilo personalizado.-->
-  <title>O SITE</title>
 </head>
 <body>
-  <div class="caixa-flex">
-    <!-- Barra fixa de cima -->
-    <div class="barra-superior">
-      <h1>o site</h1>
+
+  <!-- ===================== Cabeçalho ===================== -->
+  <header class="cabecalho text-center py-3">
+    <h1>Calculadora Linear & Geral</h1>
+  </header>
+
+  <!-- ===================== Abas ===================== -->
+  <div class="abas d-flex justify-content-center my-3 gap-2">
+    <button class="botao-aba ativo btn btn-secondary" data-alvo="#determinante">Determinante</button>
+    <button class="botao-aba btn btn-secondary" data-alvo="#calculadora">Calculadora</button>
+  </div>
+
+  <!-- ===================== Conteúdo das abas ===================== -->
+  <div class="conteudo-abas text-center">
+
+    <!-- ===================== Aba Determinante ===================== -->
+    <div id="determinante" class="conteudo-aba">
+
+      <label for="tamanho-matriz">Escolha o tamanho da matriz:</label>
+      <select id="tamanho-matriz" class="form-select w-auto mx-auto my-2">
+        <option value="2">2x2</option>
+        <option value="3">3x3</option>
+      </select>
+
+      <!-- Matriz 2x2 -->
+      <div id="inputs-2x2" class="container-matriz">
+        <div class="linha-matriz my-1">
+          <input type="number" class="input-matriz" placeholder="A11">
+          <input type="number" class="input-matriz" placeholder="A12">
+        </div>
+        <div class="linha-matriz my-1">
+          <input type="number" class="input-matriz" placeholder="A21">
+          <input type="number" class="input-matriz" placeholder="A22">
+        </div>
+      </div>
+
+      <!-- Matriz 3x3 -->
+      <div id="inputs-3x3" class="container-matriz d-none">
+        <div class="linha-matriz my-1">
+          <input type="number" class="input-matriz" placeholder="A11">
+          <input type="number" class="input-matriz" placeholder="A12">
+          <input type="number" class="input-matriz" placeholder="A13">
+        </div>
+        <div class="linha-matriz my-1">
+          <input type="number" class="input-matriz" placeholder="A21">
+          <input type="number" class="input-matriz" placeholder="A22">
+          <input type="number" class="input-matriz" placeholder="A23">
+        </div>
+        <div class="linha-matriz my-1">
+          <input type="number" class="input-matriz" placeholder="A31">
+          <input type="number" class="input-matriz" placeholder="A32">
+          <input type="number" class="input-matriz" placeholder="A33">
+        </div>
+      </div>
+
+      <button class="botao-calcular btn btn-success mt-2">Calcular Determinante</button>
+      <div class="caixa-resultado mt-2">Resultado:</div>
     </div>
 
-  <!-- Container principal -->
-  <div class="container-principal">
-    
-    <!-- Menu Lateral -->
-    <div class="menu-lateral">
-      <h1>Menu Lateral</h1>
-      <div class="botoes-menu">
-        <button id="opcao1">Opção 1</button>
-        <button id="opcao2">Opção 2</button>
-        <button id="opcao3">Opção 3</button>
-        <button id="opcao4">Opção 4</button>
+    <!-- ===================== Aba Calculadora ===================== -->
+    <div id="calculadora" class="conteudo-aba d-none">
+
+      <!-- Caixa da calculadora -->
+      <div class="container-calculadora mx-auto p-3">
+
+        <!-- Display da calculadora -->
+        <div class="display-calculadora mb-3" id="display-calculadora">0</div>
+
+        <!-- Botões da calculadora -->
+        <div class="botoes-calculadora">
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+          <button>/</button>
+
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>*</button>
+
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button>-</button>
+
+          <button>0</button>
+          <button>C</button>
+          <button>=</button>
+          <button>+</button>
+        </div>
+
       </div>
     </div>
 
-    <!-- Conteúdo Principal -->
-    <div class="conteudo-principal">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati earum praesentium temporibus eum architecto aut, enim rerum animi quam ad quis, maxime autem possimus sed nam doloremque ex nisi neque? lorem
-      </p>
-    </div>
   </div>
 
+  <!-- Script personalizado -->
   <script src="../scripts/script_index.js"></script>
 </body>
-
-
-
 </html>
