--- a/paginas/index.html
+++ b/paginas/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora Linear & Geral</title>
+  <title>(Nome muito bom...)</title>
 
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,18 +15,32 @@
 
   <!-- ===================== Cabeçalho ===================== -->
   <header class="cabecalho text-center py-3">
-    <h1>Calculadora Linear & Geral</h1>
+    <h1>(Nome muito bom...)</h1>
   </header>
 
-  <!-- ===================== Abas ===================== -->
+  <!-- =====================  Botões para abas ===================== -->
   <div class="abas d-flex justify-content-center my-3 gap-2">
-    <button class="botao-aba ativo btn btn-secondary" data-alvo="#determinante">Determinante</button>
-    <button class="botao-aba btn btn-secondary" data-alvo="#calculadora">Calculadora</button>
-    <button class="botao-aba btn btn-secondary" data-alvo="#sistema_linear">Sistema Linear</button>
+    <button class="botao-aba ativo  " data-alvo="#determinante">Determinante</button>
+    <button class="botao-aba" data-alvo="#sistema_linear">Sistema Linear</button>
+    <button class="botao-aba" data-alvo="#configuracao"><img  id="configuracao_icone" src="../imagens/configuracao_icone.png"></button>
+
+
   </div>
 
   <!-- ===================== Conteúdo das abas ===================== -->
   <div class="conteudo-abas text-center">
+    
+
+    <!-- ===================== Aba Configurações ===================== -->
+    <div id="configuracao" class="conteudo-aba d-none">
+      <!-- Botão para alternar tema -->
+       <button id="botao-tema" class="mt-3">Tema Escuro</button>
+       <br><br>
+       <p>Em construção...</p>
+
+    </div>
+
+
     <!-- ===================== Aba Sistema Linear ===================== -->
     <div id="sistema_linear" class="conteudo-aba d-none">
 
@@ -41,15 +55,19 @@
       <div id="inputs-2x2-sistema" class="container-sistema">
         <div class="linha-sistema my-1">
           <input type="number" class="input-sistema" placeholder="a11">
+          <span>X</span>
           <span>+</span>
           <input type="number" class="input-sistema" placeholder="a12">
+          <span>Y</span>
           <span>=</span>
           <input type="number" class="input-sistema" placeholder="b1">
         </div>
         <div class="linha-sistema my-1">
           <input type="number" class="input-sistema" placeholder="a21">
+          <span>X</span>
           <span>+</span>
           <input type="number" class="input-sistema" placeholder="a22">
+          <span>Y</span>
           <span>=</span>
           <input type="number" class="input-sistema" placeholder="b2">
         </div>
@@ -59,35 +77,44 @@
       <div id="inputs-3x3-sistema" class="container-sistema d-none">
         <div class="linha-sistema my-1">
           <input type="number" class="input-sistema" placeholder="a11">
+          <span>X</span>
           <span>+</span>
           <input type="number" class="input-sistema" placeholder="a12">
+          <span>Y</span>
           <span>+</span>
           <input type="number" class="input-sistema" placeholder="a13">
+          <span>Z</span>
           <span>=</span>
           <input type="number" class="input-sistema" placeholder="b1">
         </div>
         <div class="linha-sistema my-1">
           <input type="number" class="input-sistema" placeholder="a21">
+          <span>X</span>
           <span>+</span>
           <input type="number" class="input-sistema" placeholder="a22">
+          <span>Y</span>
           <span>+</span>
           <input type="number" class="input-sistema" placeholder="a23">
+          <span>Z</span>
           <span>=</span>
           <input type="number" class="input-sistema" placeholder="b2">
         </div>
         <div class="linha-sistema my-1">
           <input type="number" class="input-sistema" placeholder="a31">
+          <span>X</span>
           <span>+</span>
           <input type="number" class="input-sistema" placeholder="a32">
+          <span>Y</span>
           <span>+</span>
           <input type="number" class="input-sistema" placeholder="a33">
+          <span>Z</span>
           <span>=</span>
           <input type="number" class="input-sistema" placeholder="b3">
         </div>
       </div>
 
       <!-- Botão de cálculo e resultado -->
-      <button class="botao-calcular btn btn-success mt-3">Calcular Sistema</button>
+      <button class="botao-calcular   mt-3">Calcular Sistema</button>
       <div class="caixa-resultado mt-2">Resultado:</div>
     </div>
 
@@ -131,44 +158,11 @@
         </div>
       </div>
 
-      <button class="botao-calcular btn btn-success mt-2">Calcular Determinante</button>
+      <button class="botao-calcular   mt-2">Calcular Determinante</button>
       <div class="caixa-resultado mt-2">Resultado:</div>
     </div>
 
-    <!-- ===================== Aba Calculadora ===================== -->
-    <div id="calculadora" class="conteudo-aba d-none">
-
-      <!-- Caixa da calculadora -->
-      <div class="container-calculadora mx-auto p-3">
-
-        <!-- Display da calculadora -->
-        <div class="display-calculadora mb-3" id="display-calculadora">0</div>
-
-        <!-- Botões da calculadora -->
-        <div class="botoes-calculadora">
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
-          <button>/</button>
-
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
-          <button>*</button>
-
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>-</button>
-
-          <button>0</button>
-          <button>C</button>
-          <button>=</button>
-          <button>+</button>
-        </div>
-
-      </div>
-    </div>
+    
 
   </div>
 
