--- a/paginas/index.html
+++ b/paginas/index.html
@@ -34,9 +34,10 @@
     <!-- ===================== Aba Configurações ===================== -->
     <div id="configuracao" class="conteudo-aba d-none">
       <!-- Botão para alternar tema -->
-       <button id="botao-tema" class="mt-3">Tema Escuro</button>
-       <br><br>
-       <p>Em construção...</p>
+       <button id="botao-tema" class="botoes_configuracao mt-3">Tema Escuro</button>
+       <br>
+       <!-- Botão modo GAMER -->
+       <button id="botao-gamer" class="botoes_configuracao mt-3">Modo GAMER</button>
 
     </div>
 
@@ -112,7 +113,7 @@
           <input type="number" class="input-sistema" placeholder="b3">
         </div>
       </div>
-
+       <br>
       <!-- Botão de cálculo e resultado -->
       <button class="botao-calcular   mt-3">Calcular Sistema</button>
       <div class="caixa-resultado mt-2">Resultado:</div>
@@ -157,7 +158,6 @@
           <input type="number" class="input-matriz" placeholder="A33">
         </div>
       </div>
-
       <button class="botao-calcular   mt-2">Calcular Determinante</button>
       <div class="caixa-resultado mt-2">Resultado:</div>
     </div>
