--- a/paginas/index.html
+++ b/paginas/index.html
@@ -3,170 +3,171 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>(Nome muito bom...)</title>
+  <title>MATEMÁQUINA EXTERMATRIZADORA</title>
 
-  
+  <!-- ===== Bootstrap ===== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  
+  <!-- ===== Estilo personalizado ===== -->
   <link rel="stylesheet" href="../estilos/estilo_index.css">
 </head>
+
 <body>
 
   <!-- ===================== Cabeçalho ===================== -->
   <header class="cabecalho text-center py-3">
-    <h1>(Nome muito bom...)</h1>
+    <h1>MATEMÁQUINA EXTERMATRIZADORA</h1>
   </header>
 
-  <!-- =====================  Botões para abas ===================== -->
-  <div class="abas d-flex justify-content-center my-3 gap-2">
-    <button class="botao-aba ativo  " data-alvo="#determinante">Determinante</button>
-    <button class="botao-aba" data-alvo="#sistema_linear">Sistema Linear</button>
-    <button class="botao-aba" data-alvo="#configuracao"><img  id="configuracao_icone" src="../imagens/configuracao_icone.png"></button>
+  <!-- ===================== Container principal ===================== -->
+  <div id="borda_site">
 
-
-  </div>
-
-  <!-- ===================== Conteúdo das abas ===================== -->
-  <div class="conteudo-abas text-center">
-    
-
-    <!-- ===================== Aba Configurações ===================== -->
-    <div id="configuracao" class="conteudo-aba d-none">
-      <!-- Botão para alternar tema -->
-       <button id="botao-tema" class="mt-3">Tema Escuro</button>
-       <br><br>
-       <p>Em construção...</p>
-
+    <!-- ===================== Botões das abas ===================== -->
+    <div class="abas d-flex justify-content-center my-2 mt-1 gap-2">
+      <button class="botao-aba ativo" data-alvo="#determinante">Determinante</button>
+      <button class="botao-aba" data-alvo="#sistema_linear">Sistema Linear</button>
+      <button class="botao-aba" data-alvo="#configuracao">
+        <img class="icones" src="../imagens/configuracao_icone.png">
+      </button>
     </div>
 
+    <!-- ===================== Conteúdo das abas ===================== -->
+    <div class="conteudo-abas text-center">
 
-    <!-- ===================== Aba Sistema Linear ===================== -->
-    <div id="sistema_linear" class="conteudo-aba d-none">
-
-      <!-- Seleção do tamanho do sistema -->
-      <label for="tamanho-sistema">Escolha o tamanho do sistema:</label>
-      <select id="tamanho-sistema" class="form-select w-auto mx-auto my-2">
-        <option value="2">2 incógnitas (2x2)</option>
-        <option value="3">3 incógnitas (3x3)</option>
-      </select>
-
-      <!-- Sistema 2x2 -->
-      <div id="inputs-2x2-sistema" class="container-sistema">
-        <div class="linha-sistema my-1">
-          <input type="number" class="input-sistema" placeholder="a11">
-          <span>X</span>
-          <span>+</span>
-          <input type="number" class="input-sistema" placeholder="a12">
-          <span>Y</span>
-          <span>=</span>
-          <input type="number" class="input-sistema" placeholder="b1">
-        </div>
-        <div class="linha-sistema my-1">
-          <input type="number" class="input-sistema" placeholder="a21">
-          <span>X</span>
-          <span>+</span>
-          <input type="number" class="input-sistema" placeholder="a22">
-          <span>Y</span>
-          <span>=</span>
-          <input type="number" class="input-sistema" placeholder="b2">
-        </div>
+      <!-- ===== Aba Configurações ===== -->
+      <div id="configuracao" class="conteudo-aba d-none">
+        <button id="botao-tema" class="botoes_configuracao mt-3">Tema Escuro</button>
+        <br>
+        <button id="botao-gamer" class="botoes_configuracao mt-3">MODO GAMER</button>
       </div>
 
-      <!-- Sistema 3x3 -->
-      <div id="inputs-3x3-sistema" class="container-sistema d-none">
-        <div class="linha-sistema my-1">
-          <input type="number" class="input-sistema" placeholder="a11">
-          <span>X</span>
-          <span>+</span>
-          <input type="number" class="input-sistema" placeholder="a12">
-          <span>Y</span>
-          <span>+</span>
-          <input type="number" class="input-sistema" placeholder="a13">
-          <span>Z</span>
-          <span>=</span>
-          <input type="number" class="input-sistema" placeholder="b1">
+      <!-- ===== Aba Sistema Linear ===== -->
+      <div id="sistema_linear" class="conteudo-aba d-none">
+
+        <!-- Seleção do tamanho -->
+        <label for="tamanho-sistema">Escolha o tamanho do sistema:</label>
+        <select id="tamanho-sistema" class="form-select w-auto mx-auto my-2">
+          <option value="2">2 incógnitas (2x2)</option>
+          <option value="3">3 incógnitas (3x3)</option>
+        </select>
+
+        <!-- Sistema 2x2 -->
+        <div id="inputs-2x2-sistema" class="container-sistema">
+          <div class="linha-sistema my-1">
+            <input type="text" class="input-sistema" placeholder="a11" id="2a11">
+            <span>X</span> <span>+</span>
+            <input type="text" class="input-sistema" placeholder="a12" id="2a12">
+            <span>Y</span> <span>=</span>
+            <input type="text" class="input-sistema" placeholder="b1" id="2b1">
+          </div>
+          <div class="linha-sistema my-1">
+            <input type="text" class="input-sistema" placeholder="a21" id="2a21">
+            <span>X</span> <span>+</span>
+            <input type="text" class="input-sistema" placeholder="a22" id="2a22">
+            <span>Y</span> <span>=</span>
+            <input type="text" class="input-sistema" placeholder="b2" id="2b2">
+          </div>
         </div>
-        <div class="linha-sistema my-1">
-          <input type="number" class="input-sistema" placeholder="a21">
-          <span>X</span>
-          <span>+</span>
-          <input type="number" class="input-sistema" placeholder="a22">
-          <span>Y</span>
-          <span>+</span>
-          <input type="number" class="input-sistema" placeholder="a23">
-          <span>Z</span>
-          <span>=</span>
-          <input type="number" class="input-sistema" placeholder="b2">
+
+        <!-- Sistema 3x3 -->
+        <div id="inputs-3x3-sistema" class="container-sistema d-none">
+          <div class="linha-sistema my-1">
+            <input type="number" class="input-sistema" placeholder="a11" id="3a11">
+            <span>X</span> <span>+</span>
+            <input type="number" class="input-sistema" placeholder="a12" id="3a12">
+            <span>Y</span> <span>+</span>
+            <input type="number" class="input-sistema" placeholder="a13" id="3a13">
+            <span>Z</span> <span>=</span>
+            <input type="number" class="input-sistema" placeholder="b1" id="3b1">
+          </div>
+          <div class="linha-sistema my-1">
+            <input type="number" class="input-sistema" placeholder="a21" id="3a21">
+            <span>X</span> <span>+</span>
+            <input type="number" class="input-sistema" placeholder="a22" id="3a22">
+            <span>Y</span> <span>+</span>
+            <input type="number" class="input-sistema" placeholder="a23" id="3a23">
+            <span>Z</span> <span>=</span>
+            <input type="number" class="input-sistema" placeholder="b2" id="3b2">
+          </div>
+          <div class="linha-sistema my-1">
+            <input type="number" class="input-sistema" placeholder="a31" id="3a31">
+            <span>X</span> <span>+</span>
+            <input type="number" class="input-sistema" placeholder="a32" id="3a32">
+            <span>Y</span> <span>+</span>
+            <input type="number" class="input-sistema" placeholder="a33" id="3a33">
+            <span>Z</span> <span>=</span>
+            <input type="number" class="input-sistema" placeholder="b3" id="3b3">
+          </div>
         </div>
-        <div class="linha-sistema my-1">
-          <input type="number" class="input-sistema" placeholder="a31">
-          <span>X</span>
-          <span>+</span>
-          <input type="number" class="input-sistema" placeholder="a32">
-          <span>Y</span>
-          <span>+</span>
-          <input type="number" class="input-sistema" placeholder="a33">
-          <span>Z</span>
-          <span>=</span>
-          <input type="number" class="input-sistema" placeholder="b3">
+
+        <!-- Botões e resultado -->
+        <div class="d-flex justify-content-center gap-2 mt-2">
+          <button class="botao-calcular" id="Button_sis">Calcular Sistema</button>
+          <button id="resetarSis" class="botoesResetar">
+            <img class="icones" src="../imagens/resetar_icone.png">
+          </button>
         </div>
+
+        <div class="caixa-resultado mt-3" id="sis">Resultado:</div>
       </div>
 
-      <!-- Botão de cálculo e resultado -->
-      <button class="botao-calcular   mt-3">Calcular Sistema</button>
-      <div class="caixa-resultado mt-2">Resultado:</div>
-    </div>
+      <!-- ===== Aba Determinante ===== -->
+      <div id="determinante" class="conteudo-aba">
 
-    <!-- ===================== Aba Determinante ===================== -->
-    <div id="determinante" class="conteudo-aba">
+        <!-- Seleção do tamanho -->
+        <label for="tamanho-matriz">Escolha o tamanho da matriz:</label>
+        <select id="tamanho-matriz" class="form-select w-auto mx-auto my-2">
+          <option value="2">2x2</option>
+          <option value="3">3x3</option>
+        </select>
 
-      <label for="tamanho-matriz">Escolha o tamanho da matriz:</label>
-      <select id="tamanho-matriz" class="form-select w-auto mx-auto my-2">
-        <option value="2">2x2</option>
-        <option value="3">3x3</option>
-      </select>
-
-      <!-- Matriz 2x2 -->
-      <div id="inputs-2x2" class="container-matriz">
-        <div class="linha-matriz my-1">
-          <input type="number" class="input-matriz" placeholder="A11">
-          <input type="number" class="input-matriz" placeholder="A12">
+        <!-- Matriz 2x2 -->
+        <div id="inputs-2x2" class="container-matriz">
+          <div class="linha-matriz my-1">
+            <input type="number" class="input-matriz" placeholder="A11" id="2A11">
+            <input type="number" class="input-matriz" placeholder="A12" id="2A12">
+          </div>
+          <div class="linha-matriz my-1">
+            <input type="number" class="input-matriz" placeholder="A21" id="2A21">
+            <input type="number" class="input-matriz" placeholder="A22" id="2A22">
+          </div>
         </div>
-        <div class="linha-matriz my-1">
-          <input type="number" class="input-matriz" placeholder="A21">
-          <input type="number" class="input-matriz" placeholder="A22">
+
+        <!-- Matriz 3x3 -->
+        <div id="inputs-3x3" class="container-matriz d-none">
+          <div class="linha-matriz my-1">
+            <input type="number" class="input-matriz" placeholder="A11" id="3A11">
+            <input type="number" class="input-matriz" placeholder="A12" id="3A12">
+            <input type="number" class="input-matriz" placeholder="A13" id="3A13">
+          </div>
+          <div class="linha-matriz my-1">
+            <input type="number" class="input-matriz" placeholder="A21" id="3A21">
+            <input type="number" class="input-matriz" placeholder="A22" id="3A22">
+            <input type="number" class="input-matriz" placeholder="A23" id="3A23">
+          </div>
+          <div class="linha-matriz my-1">
+            <input type="number" class="input-matriz" placeholder="A31" id="3A31">
+            <input type="number" class="input-matriz" placeholder="A32" id="3A32">
+            <input type="number" class="input-matriz" placeholder="A33" id="3A33">
+          </div>
         </div>
+
+        <!-- Botões e resultado -->
+        <div class="d-flex justify-content-center gap-2 mt-2">
+          <button class="botao-calcular" id="button_det">Calcular Determinante</button>
+          <button id="resetarDet" class="botoesResetar">
+            <img class="icones" src="../imagens/resetar_icone.png">
+          </button>
+        </div>
+
+        <div class="caixa-resultado mt-3" id="det">Resultado:</div>
       </div>
 
-      <!-- Matriz 3x3 -->
-      <div id="inputs-3x3" class="container-matriz d-none">
-        <div class="linha-matriz my-1">
-          <input type="number" class="input-matriz" placeholder="A11">
-          <input type="number" class="input-matriz" placeholder="A12">
-          <input type="number" class="input-matriz" placeholder="A13">
-        </div>
-        <div class="linha-matriz my-1">
-          <input type="number" class="input-matriz" placeholder="A21">
-          <input type="number" class="input-matriz" placeholder="A22">
-          <input type="number" class="input-matriz" placeholder="A23">
-        </div>
-        <div class="linha-matriz my-1">
-          <input type="number" class="input-matriz" placeholder="A31">
-          <input type="number" class="input-matriz" placeholder="A32">
-          <input type="number" class="input-matriz" placeholder="A33">
-        </div>
-      </div>
+    </div> <!-- /conteúdo-abas -->
+  </div> <!-- /borda_site -->
 
-      <button class="botao-calcular   mt-2">Calcular Determinante</button>
-      <div class="caixa-resultado mt-2">Resultado:</div>
-    </div>
-
-    
-
-  </div>
-
-  <!-- Script personalizado -->
+  <!-- ===================== Script personalizado ===================== -->
   <script src="../scripts/script_index.js"></script>
+
 </body>
 </html>
