--- a/paginas/index.html
+++ b/paginas/index.html
@@ -24,7 +24,7 @@
     <!-- Puxador 1: Tutorial Determinante -->
     <div class="puxador-container">
       <button class="puxador-botao">📖 Tutorial: Determinante</button>
-      <div class="puxador-conteudo">
+      <div class="puxador-conteudo" id="puxadores-conteudo-limitado">
         <div class="puxador-cabecalho">
           <h3>Como Calcular Determinante</h3>
           <button class="puxador-fechar">×</button>
@@ -56,7 +56,7 @@
     <!-- Puxador 2: Tutorial Sistema Linear -->
     <div class="puxador-container">
       <button class="puxador-botao">📚 Tutorial: Sistema Linear</button>
-      <div class="puxador-conteudo">
+      <div class="puxador-conteudo" id="puxadores-conteudo-limitado">
         <div class="puxador-cabecalho">
           <h3>Como Resolver Sistema Linear</h3>
           <button class="puxador-fechar">×</button>
@@ -89,7 +89,7 @@
     <!-- Puxador 3: Símbolos Matemáticos -->
     <div class="puxador-container">
       <button class="puxador-botao">🔢 Símbolos Matemáticos</button>
-      <div class="puxador-conteudo">
+      <div class="puxador-conteudo" id="puxadores-conteudo-limitado">
         <div class="puxador-cabecalho">
           <h3>Símbolos para Copiar</h3>
           <button class="puxador-fechar">×</button>
