--- a/paginas/index.html
+++ b/paginas/index.html
@@ -105,6 +105,9 @@
 
   <h4>💡 Dica Final:</h4>
   <p>Use o <strong>puxador de símbolos</strong> para copiar rapidamente símbolos como √, ^, log e sen! Assim você pode montar expressões completas sem precisar procurar no teclado.</p>
+
+  <h4> IMPORTANTE: <h4>
+  <p> Para representar decimal use ".", não "," </p>
 </div>
 
       </div>
@@ -165,12 +168,17 @@
   <p><strong>Sistema Possível e Determinado:</strong> Uma única solução — valores específicos para X, Y (e Z).</p>
   <p><strong>Sistema Possível e Indeterminado:</strong> Infinitas soluções — as equações são proporcionais.</p>
   <p><strong>Sistema Impossível:</strong> Sem solução — as equações são contraditórias.</p>
+  <p><strong>Sistema Errado:</strong> Sem solução — Algum campo apresenta campo com formatação incorreta.</p>
 
   <hr>
 
   <h4>💡 Dica Final:</h4>
   <p>Use o <strong>puxador de símbolos</strong> para copiar rapidamente √, ^, log e outros símbolos! Assim fica bem mais fácil montar e resolver seus sistemas sem precisar procurar no teclado.</p>
+
+  <h4> IMPORTANTE: </h4>
+  <p> Para representar decimal use ".", não ",".</p>
 </div>
+
 
       </div>
     </div>
@@ -254,6 +262,16 @@
             <input type="text" class="input-sistema" placeholder="b2" id="2b2">
           </div>
 
+          <!-- Botões e resultado -->
+          <div class="d-flex justify-content-center gap-2 mt-2">
+                <button class="botao-calcular" id="Button_sis2x2">Calcular Sistema</button>
+                <button id="resetarSis" class="botoesResetar">
+                  <img class="icones" src="../imagens/resetar_icone.png">
+                </button>
+          </div>
+
+          <div class="caixa-resultado mt-3" id="sis2x2">Resultado:</div>
+
         </div>
 
         <!-- Sistema 3x3 -->
@@ -285,19 +303,17 @@
             <span>Z</span> <span>=</span>
             <input type="text" class="input-sistema" placeholder="b3" id="3b3">
           </div>
-        </div>
-
-        <!-- Botões e resultado -->
-        <div class="d-flex justify-content-center gap-2 mt-2">
-          <button class="botao-calcular" id="Button_sis">Calcular Sistema</button>
-          <button id="resetarSis" class="botoesResetar">
-            <img class="icones" src="../imagens/resetar_icone.png">
-          </button>
-        </div>
-
-        <div class="caixa-resultado mt-3" id="sis">Resultado:</div>
-      </div>
-
+          <!-- Botões e resultado -->
+          <div class="d-flex justify-content-center gap-2 mt-2">
+                <button class="botao-calcular" id="Button_sis3x3">Calcular Sistema</button>
+                <button id="resetarSis" class="botoesResetar">
+                  <img class="icones" src="../imagens/resetar_icone.png">
+                </button>
+          </div>
+          
+          <div class="caixa-resultado mt-3" id="sis3x3">Resultado:</div>
+</div>
+</div>
       <!-- ===== Aba Determinante ===== -->
       <div id="determinante" class="conteudo-aba">
 
@@ -425,10 +441,11 @@
   
   <h4>💡 Dica Final:</h4>
   <p>Use o <strong>menu de símbolos</strong> para copiar rapidamente símbolos como √, ^, log e sen! Assim você pode montar expressões completas sem precisar procurar no teclado.</p>
+
+  <h4>IMPORTANTE: </h4>
+  <p> Para representar decimal use ".", não "," </p>
 </div>
 
-    </div>
-  </div>
 
   <!-- Seção: Tutorial Sistema Linear -->
   <div id="sistema-tutorial" class="secao-mobile">
@@ -481,14 +498,16 @@
   <p><strong>Sistema Possível e Determinado:</strong> Uma única solução — valores específicos para X, Y (e Z).</p>
   <p><strong>Sistema Possível e Indeterminado:</strong> Infinitas soluções — as equações são proporcionais.</p>
   <p><strong>Sistema Impossível:</strong> Sem solução — as equações são contraditórias.</p>
+  <p><strong>Sistema Errado:</strong> Sem solução — Algum campo apresenta campo com formatação incorreta.</p>
 
   <hr>
 
   <h4>💡 Dica Final:</h4>
   <p>Use o <strong>puxador de símbolos</strong> para copiar rapidamente √, ^, log e outros símbolos! Assim fica bem mais fácil montar e resolver seus sistemas sem precisar procurar no teclado.</p>
 
-      </div>
-    </div>
+  <h4> IMPORTANTE: <h4>
+  <p> Para representar decimal use ".", não ",".</p>
+
   </div>
 
   <!-- Seção: Símbolos Matemáticos -->
